--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -12,15 +12,15 @@
 
 .features__title-wrapper,
 .features__list-wrapper {
-  width: 320px;
+  @include mobile-wrapper;
   margin: 0 auto;
 
   @include tablet {
-    width: 660px;
+    @include tablet-wrapper;
   }
 
   @include desktop {
-    width: 1200px;
+    @include desktop-wrapper;
   }
 }
 
@@ -32,9 +32,9 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__title-block {
-    padding-top: 60px;
+    padding-top: 62px;
     min-height: 323px;
   }
 }
@@ -61,14 +61,14 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__title {
     font-size: 50px;
     line-height: 68px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__title:nth-child(2) {
     width: 420px;
     margin-top: 0;
@@ -87,7 +87,7 @@
   @include tablet {
     display: flex;
     min-height: 485px;
-    padding-top: 5px;
+    padding-top: 7px;
   }
 
   @include desktop {
@@ -147,10 +147,10 @@
   margin-bottom: -45px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__list {
     display: flex;
-    padding: 0 160px;
+    padding: 0 40px;
     width: 100%;
     justify-content: space-between;
     padding-top: 55px;
@@ -161,7 +161,9 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0 130px;
+    padding: 0;
+    padding-left: 14px;
+    padding-right: 8px;
     box-sizing: border-box;
     margin-left: 0;
   }
@@ -189,7 +191,7 @@
   margin-bottom: 11px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__item-name {
     font-size: 30px;
     line-height: 30px;
@@ -202,7 +204,7 @@
   margin: 0;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .features__description {
     font-size: 18px;
     line-height: 30px;
