--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -6,19 +6,19 @@
 
 @media (min-width: 660px) {
   .reviews {
-    padding-top: 75px;
-    padding-bottom: 0;
-    min-height: 329px;
+    padding-top: 32px;
+    padding-bottom: 3px;
+    min-height: 295px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .reviews {
     padding-top: 165px;
     background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
     background-position: center 71px;
-    min-height: 410px;
+    min-height: 242px;
   }
 }
 
@@ -32,7 +32,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .reviews__list {
     margin-bottom: 0;
   }
@@ -59,7 +59,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .reviews__author-name {
     font-size: 24px;
     margin-top: 20px;
@@ -79,7 +79,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .reviews__author-description {
     font-size: 18px;
   }
@@ -99,22 +99,23 @@
 }
 
 .reviews__wrapper {
-  width: 320px;
+  @include mobile-wrapper;
   margin: 0 auto;
-  padding: 43px 20px 30px 20px;
+  padding: 43px 20px 1px 20px;
   box-sizing: border-box;
 
   @include tablet {
-    width: 660px;
+    @include tablet-wrapper;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .reviews__wrapper {
     width: 940px;
     margin: 0 auto;
-    padding: 0 126px;
+    padding: 0 100px;
     box-sizing: border-box;
     display: flex;
+    position: relative;
   }
 }
