--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,14 +1,13 @@
 .intro {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  padding-top: 20px;
+  padding-top: 23px;
   min-height: 396px;
   position: relative;
   box-sizing: border-box;
   display: flex;
-  background-size: cover;
   flex-direction: column;
+  background-size: 100%;
 
   @include retina {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -16,23 +15,26 @@
 }
 
 .intro__wrapper {
-  width: 320px;
+  @include mobile-wrapper;
   margin: 0 auto;
 
   @include tablet {
-    width: 660px;
+    @include tablet-wrapper;
   }
 
   @include desktop {
-    width: 1200px;
+    @include desktop-wrapper;
+    position: relative;
   }
 }
 
 @media (min-width: 660px) {
   .intro {
-    padding-top: 90px;
-    min-height: 616px;
+    padding-top: 94px;
+    min-height: 617px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-size: auto;
+    background-position: center;
 
     @include retina {
       background-image: url("../img/bg-back-tablet@2x.jpg");
@@ -40,7 +42,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .intro {
     padding-top: 210px;
     min-height: 853px;
@@ -65,13 +67,14 @@
   }
 
   @include desktop {
-    right: 4px;
+    right: -116px;
+    top: -2px;
   }
 }
 
 .intro--small {
-  min-height: 167px;
-  padding-top: 25px;
+  min-height: 170px;
+  padding-top: 27px;
 }
 
 .intro__title {
@@ -99,8 +102,8 @@
 
 @media (min-width: 660px) {
   .intro--small {
-    padding-top: 62px;
-    min-height: 326px;
+    padding-top: 65px;
+    min-height: 330px;
   }
 
   .intro--small .intro__title {
@@ -111,7 +114,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .intro--small {
     padding-left: 0;
     min-height: 394px;
@@ -123,7 +126,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
   .intro__title {
     font-size: 50px;
     line-height: 68px;
