--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   background-size: 100%;
+  background-position-y: -67px;
 
   @include retina {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -35,6 +36,7 @@
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: auto;
     background-position: center;
+    background-position-y: -111px;
 
     @include retina {
       background-image: url("../img/bg-back-tablet@2x.jpg");
@@ -47,6 +49,7 @@
     padding-top: 210px;
     min-height: 853px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-position: top;
 
     @include retina {
       background-image: url("../img/bg-back-desktop@2x.jpg");
