Правки перед допуском 2

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -110,8 +110,10 @@
   font-size: 14px;
   line-height: 30px;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
   padding: 44px 22px 22px 22px;
+  width: 320px;
+  box-sizing: border-box;
 }
 
 @media (min-width: 660px) {
@@ -120,6 +122,7 @@
     width: 490px;
     margin: 0 auto;
     padding-top: 91px;
+    box-sizing: content-box;
   }
 }
 
@@ -828,12 +831,12 @@
   }
 }
 
-.form__title--appeal {
+.form__title-appeal {
   display: none;
 }
 
 @media (min-width: 660px) {
-  .form__title--appeal {
+  .form__title-appeal {
     display: inline;
   }
 }
