--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -34,7 +34,7 @@
   z-index: 1;
   width: 100%;
   height: 35px;
-  background-image: url(../img/bg-triangle-white-footer.svg);
+  background-image: url("../img/bg-triangle-white-footer.svg");
   background-size: 100% 35px;
   background-repeat: no-repeat;
 
