--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -346,7 +346,7 @@
   border: 2px solid #e5e5e5;
   border-radius: 1px;
   box-sizing: border-box;
-  background-image: url("../img/icon-yes.svg");
+  background-image: url("../img/icon-yes-checkbox.svg");
   background-size: 22px 16px;
   background-repeat: no-repeat;
   background-position: center;
